--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>My first Angular App</title>
   </head>
   <body>
+    <h1>My First Angular App</h1>
     <div ng-controller="MyFirstController">
-
+      <input type="text" ng-model="name">
+      Inside my input is: {{name}}
     </div>
   </body>
 </html>
